--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,11 @@
 [metadata]
 name = aioconveyor
-version = 0.0.2
+version = 0.1.0
 
 description= asyncio long running producer consumer
 keywords = asyncio
 author = paul sorenson
 author_email = news02@metrak.com
-# test_suite = tests
 
 [options]
 python_requires = >=3.8
@@ -17,6 +16,7 @@ package_dir =
     =src
 packages = find:
 py_modules = aioconveyor
+test_suite = tests
 
 [options.packages.find]
 where = src
